--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>CESFAM Raúl Sánchez Bañados – Información para la comunidad</title>
+
 <style>
   :root {
     --blue:#0f4c81;
@@ -12,32 +13,40 @@
     --card:#ffffff;
     --accent:#19c1c1;
   }
+
   * { box-sizing: border-box; }
+
   body {
-    margin:0; font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+    margin:0;
+    font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     background: linear-gradient(180deg, var(--blue), var(--blue-2));
     color:#fff;
   }
+
   .container { max-width: 900px; margin: 0 auto; padding: 16px; }
-  header { text-align:center; padding: 28px 12px 18px; }
+
+  .logo-bar { display:flex; justify-content:center; gap:14px; opacity:.95; font-weight:700; margin-top: 6px; }
+  .logo-pill { background:rgba(255,255,255,.12); border:1px solid rgba(255,255,255,.25); padding:6px 10px; border-radius:999px; }
+
+  header { text-align:center; padding: 28px 12px 10px; }
   header h1 { margin:6px 0 4px; font-size: clamp(22px,4.8vw,36px); letter-spacing:.3px; }
   header p { opacity:.95; margin:0; font-size: clamp(14px,2.6vw,18px); }
 
-  /* ===== HORARIOS PRINCIPALES (bajo el título) ===== */
+  /* ===== HORARIOS DE ATENCIÓN (bajo el título) ===== */
   .main-schedule {
     background: rgba(255,255,255,.08);
     border: 1px solid rgba(255,255,255,.18);
-    padding: 22px;
+    padding: 18px 18px;
     border-radius: 18px;
-    margin: 8px 0 22px;
+    margin: 14px 0 22px;
     text-align: center;
     box-shadow: 0 8px 24px rgba(0,0,0,.25);
     animation: fadeIn .8s ease both;
   }
   .main-schedule h2 {
-    margin: 0 0 12px;
+    margin: 0 0 10px;
     font-size: clamp(18px,3.2vw,22px);
-    font-weight: 800;
+    font-weight: 900;
     letter-spacing:.2px;
   }
   .main-schedule p {
@@ -46,8 +55,9 @@
     opacity: .95;
   }
 
+  /* ===== BLOQUE BIENVENIDA ===== */
   .welcome {
-    margin: 18px auto 26px;
+    margin: 14px auto 22px;
     background: rgba(255,255,255,.06);
     border: 1px solid rgba(255,255,255,.12);
     border-radius: 18px;
@@ -58,16 +68,21 @@
   }
   .welcome h2 { margin: 6px 0 8px; font-size: clamp(20px,4.5vw,28px); }
   .welcome p { margin: 0 0 14px; opacity:.95; }
+
   .btn {
     background: #fff; color: var(--blue);
     border: none; border-radius: 14px;
-    padding: 12px 18px; font-weight: 700;
-    cursor: pointer; transition: transform .1s ease, box-shadow .2s ease;
+    padding: 12px 18px; font-weight: 800;
+    cursor: pointer;
     box-shadow: 0 6px 18px rgba(0,0,0,.22);
+    transition: transform .15s ease, box-shadow .2s ease;
   }
   .btn:hover { transform: translateY(-1px); }
+
   main { padding: 6px 0 40px; }
+
   .grid { display:grid; gap:16px; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); }
+
   .card {
     background: var(--card); color:#0b2542;
     border-radius: 16px; padding: 18px;
@@ -75,114 +90,112 @@
     transform: translateY(8px); opacity:0;
     animation: slideUp .7s ease var(--delay,0s) forwards;
   }
+
   .card h3 { margin: 0 0 8px; display:flex; align-items:center; gap:10px; font-size: 18px; }
   .pill { display:inline-block; background:#eef6ff; color:#0b2542; border-radius:999px; padding:2px 10px; font-size:12px; margin-left:8px; }
   ul { padding-left: 18px; margin: 8px 0 0; }
   li { margin: 6px 0; }
+
   .cta-row { display:flex; flex-wrap:wrap; gap:10px; margin-top: 14px; }
   .cta-row a {
-    text-decoration:none; background: var(--accent); color:#053c3c; font-weight:700;
-    padding:10px 12px; border-radius:12px; display:inline-flex; align-items:center; gap:8px;
+    text-decoration:none;
+    background: var(--accent);
+    color:#053c3c;
+    font-weight:800;
+    padding:10px 12px;
+    border-radius:12px;
+    display:inline-flex;
+    align-items:center;
+    gap:8px;
     box-shadow: 0 6px 18px rgba(0,0,0,.15);
   }
+
   footer { text-align:center; opacity:.9; margin-top: 22px; }
-  footer a { color:#fff; font-weight: 700; }
-  .sep { height:1px; background: rgba(255,255,255,.2); margin: 18px 0 8px; }
+
   @keyframes fadeIn { from {opacity:0; transform: translateY(6px);} to {opacity:1; transform:none;} }
   @keyframes slideUp { to { transform:none; opacity:1; } }
-  .logo-bar { display:flex; justify-content:center; gap:14px; opacity:.95; font-weight:700; }
-  .logo-pill { background:rgba(255,255,255,.12); border:1px solid rgba(255,255,255,.25); padding:6px 10px; border-radius:999px; }
-<!-- ===== OIRS DESTACADO ===== -->
-<article class="card card-highlight" style="--delay:.80s">
-  <img src="img/oirs.png" alt="Trámite en Línea OIRS">
-  <div class="highlight-body">
-    <h3>📝 Trámite en Línea OIRS</h3>
-    <p>Envía consultas, reclamos o sugerencias a través del canal oficial del Ministerio de Salud.</p>
-    <div class="cta-row">
-      <a href="https://oirs.minsal.cl/" target="_blank" rel="noopener">Ir a OIRS</a>
-    </div>
-  </div>
-</article>
 
-<!-- ===== PORTAL PACIENTE DESTACADO ===== -->
-<article class="card card-highlight" style="--delay:.90s">
-  <img src="img/portal.png" alt="Portal Paciente MINSAL">
-  <div class="highlight-body">
-    <h3>👤 Portal Paciente</h3>
-    <p>Accede a información relevante de tu atención de salud a través del Portal Paciente.</p>
-    <div class="cta-row">
-      <a href="https://portalpaciente.minsal.cl/" target="_blank" rel="noopener">Ingresar al Portal</a>
-    </div>
-  </div>
-</article>
-  /* ===== BANNER PREMIUM ACTUALIZA DATOS ===== */
+  /* ===== Banner Premium Actualiza Datos ===== */
   .update-banner-pro {
-    margin: 40px 0 10px;
-    padding: 50px 30px;
-    border-radius: 28px;
+    margin: 34px 0 12px;
+    padding: 44px 26px;
+    border-radius: 26px;
     background: linear-gradient(135deg, #f3ecff 0%, #ffffff 60%, #e9fff7 100%);
     box-shadow: 0 25px 60px rgba(0,0,0,.25);
     overflow: hidden;
   }
   .update-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 40px;
-    flex-wrap: wrap;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    gap: 28px;
+    flex-wrap:wrap;
   }
-  .update-text { flex: 1; min-width: 280px; }
+  .update-text { flex:1; min-width: 260px; }
   .update-text h2 {
-    font-size: clamp(32px,5vw,56px);
+    font-size: clamp(30px,5vw,56px);
     font-weight: 900;
     color: #6a2bbf;
-    margin: 0 0 18px;
+    margin: 0 0 14px;
     line-height: 1.05;
   }
   .update-text p {
     font-size: 18px;
     color: #2e5d54;
-    margin: 0 0 26px;
-    max-width: 520px;
+    margin: 0 0 22px;
+    max-width: 560px;
   }
   .update-btn {
-    display: inline-block;
+    display:inline-block;
     background: linear-gradient(90deg, #6a2bbf, #8d52f2);
-    color: #fff;
-    padding: 16px 36px;
+    color:#fff;
+    padding: 14px 28px;
     border-radius: 999px;
-    font-weight: 800;
-    text-decoration: none;
+    font-weight: 900;
+    text-decoration:none;
     box-shadow: 0 14px 30px rgba(106,43,191,.35);
     transition: transform .2s ease, box-shadow .2s ease;
   }
   .update-btn:hover { transform: scale(1.04); box-shadow: 0 18px 36px rgba(106,43,191,.45); }
-  .update-image { flex: 1; min-width: 260px; text-align: right; }
-  .update-image img { width: 100%; max-width: 420px; filter: drop-shadow(0 30px 40px rgba(0,0,0,.25)); }
+  .update-image { flex:1; min-width: 240px; text-align:right; }
+  .update-image img { width:100%; max-width: 420px; filter: drop-shadow(0 30px 40px rgba(0,0,0,.25)); }
   @media (max-width: 768px){ .update-image { text-align:center; } }
 
-  /* ===== BANNERS IMAGEN (OIRS y Portal Paciente) ===== */
-  .image-banner {
-    margin: 26px 0 0;
-    display: flex;
-    justify-content: center;
+  /* ===== Cards con imagen atractiva (OIRS y Portal) ===== */
+  .card-highlight {
+    padding: 0;
+    overflow: hidden;
   }
-  .image-banner img {
+  .card-highlight .media-img {
     width: 100%;
-    max-width: 900px;
-    border-radius: 20px;
-    box-shadow: 0 25px 60px rgba(0,0,0,.35);
-    transition: transform .25s ease, box-shadow .25s ease;
+    height: 170px;
+    object-fit: cover;
     display:block;
   }
-  .image-banner img:hover {
-    transform: scale(1.02);
-    box-shadow: 0 30px 70px rgba(0,0,0,.45);
+  .card-highlight .media-body {
+    padding: 18px;
+  }
+  .card-highlight .media-body h3 {
+    font-size: 19px;
+    margin-bottom: 8px;
+  }
+  .card-highlight .media-body p {
+    margin: 0 0 12px;
+  }
+  .card-highlight .cta-row a {
+    background: linear-gradient(90deg, #0f4c81, #1c5f9a);
+    color:#fff;
+  }
+  .card-highlight:hover {
+    transform: translateY(-4px);
+    transition: .2s ease;
   }
 </style>
 </head>
+
 <body>
   <div class="container">
+
     <div class="logo-bar" aria-label="Logo institucional">
       <div class="logo-pill">CESFAM RAÚL SÁNCHEZ BAÑADOS</div>
     </div>
@@ -192,7 +205,7 @@
       <p>Aquí encontrarás horarios, teléfonos y servicios disponibles.</p>
     </header>
 
-    <!-- ===== HORARIOS DE ATENCIÓN (JUSTO BAJO EL TÍTULO) ===== -->
+    <!-- ===== HORARIOS DE ATENCIÓN ===== -->
     <section class="main-schedule" aria-label="Horarios de Atención">
       <h2>Horarios de Atención</h2>
 
@@ -215,6 +228,7 @@
 
     <main id="info" aria-live="polite">
       <div class="grid">
+
         <article class="card" style="--delay:.05s">
           <h3>💊 Farmacia <span class="pill">Horario</span></h3>
           <ul>
@@ -253,7 +267,9 @@
             <li>📞 <strong>Sector Rojo:</strong> <a href="tel:+56964880911">+56 9 64880911</a></li>
             <li>📞 <strong>OIRS:</strong> <a href="tel:+5697024805">+56 9 702 4805</a></li>
           </ul>
+
           <p style="margin-top:8px"><em>Puede comunicarse con su sector para obtener información o realizar consultas.</em></p>
+
           <div class="cta-row">
             <a href="tel:+56968282933">Llamar Sector Verde</a>
             <a href="tel:+56964879380">Llamar Sector Azul</a>
@@ -261,6 +277,7 @@
             <a href="tel:+56964880911">Llamar Sector Rojo</a>
             <a href="tel:+5697024805">Llamar OIRS</a>
           </div>
+
           <p style="margin-top:12px; font-size:13px; opacity:.85;">
             Los teléfonos pueden presentar intermitencia. Estamos mejorando nuestros canales de atención.
           </p>
@@ -273,9 +290,34 @@
             <a href="https://www.google.com/maps/search/?api=1&query=Papudo+655,+La+Ligua" target="_blank" rel="noopener">Abrir en Google Maps</a>
           </div>
         </article>
+
+        <!-- ===== OIRS como card atractiva con imagen ===== -->
+        <article class="card card-highlight" style="--delay:.55s">
+          <img class="media-img" src="img/oirs.png" alt="Trámite en Línea OIRS">
+          <div class="media-body">
+            <h3>📝 Trámite en Línea OIRS <span class="pill">MINSAL</span></h3>
+            <p>Envía consultas, reclamos o sugerencias a través del canal oficial.</p>
+            <div class="cta-row">
+              <a href="https://oirs.minsal.cl/" target="_blank" rel="noopener">Ir a OIRS</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- ===== Portal Paciente como card atractiva con imagen ===== -->
+        <article class="card card-highlight" style="--delay:.65s">
+          <img class="media-img" src="img/portal.png" alt="Portal Paciente MINSAL">
+          <div class="media-body">
+            <h3>👤 Portal Paciente <span class="pill">SaludDigital</span></h3>
+            <p>Accede a información y servicios disponibles en línea.</p>
+            <div class="cta-row">
+              <a href="https://portalpaciente.minsal.cl/" target="_blank" rel="noopener">Ingresar al Portal</a>
+            </div>
+          </div>
+        </article>
+
       </div>
 
-      <!-- ===== ACTUALIZA DATOS (con megáfono, bonito) ===== -->
+      <!-- ===== Banner Premium Actualiza Datos ===== -->
       <section class="update-banner-pro" aria-label="Actualiza tus datos de contacto">
         <div class="update-content">
           <div class="update-text">
@@ -297,25 +339,12 @@
         </div>
       </section>
 
-      <!-- ===== OIRS (imagen clickeable) ===== -->
-      <section class="image-banner" aria-label="OIRS">
-        <a href="https://oirs.minsal.cl/" target="_blank" rel="noopener">
-          <img src="img/oirs-banner.png" alt="Trámite en Línea OIRS">
-        </a>
-      </section>
-
-      <!-- ===== PORTAL PACIENTE (imagen clickeable) ===== -->
-      <section class="image-banner" aria-label="Portal Paciente">
-        <a href="https://portalpaciente.minsal.cl/" target="_blank" rel="noopener">
-          <img src="img/portal-paciente.png" alt="Portal Paciente MINSAL">
-        </a>
-      </section>
-
     </main>
 
     <footer>
       <p>CESFAM Raúl Sánchez Bañados – La Ligua</p>
     </footer>
+
   </div>
 </body>
 </html>
